--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <img src="https://media.tenor.com/F9R_ZEnN3B4AAAAi/good-afternoon.gif" alt="Bubu" class="bubu">
 
   <a href="main.html">
-    <button class="enter-btn">tap <3</button>
+    <button class="enter-btn">oi</button>
   </a>
 
   <div id="hearts"></div>
